[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sample_imputation"
version = "0.0.1"
description = "tdetermine missingness paterns in sample beiwe data, and try imputation methods"
authors = [
  { name = "Elizabeth Graff" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License"
]
dependencies = [
    "ipython",
    "jupyterlab",
    "loguru",
    "matplotlib",
    "notebook",
    "numpy",
    "pandas",
    "pip",
    "python-dotenv",
    "ruff",
    "scikit-learn",
    "scipy",
    "tqdm",
    "typer",
]
requires-python = "~=d.12.0"


[tool.ruff]
line-length = 99
src = ["sample_imputation"]
include = ["pyproject.toml", "sample_imputation/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["sample_imputation"]
force-sort-within-sections = true

